--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "onoff": "^6.0.3",
+    "raspberrypi-node-camera-web-streamer": "^1.1.2",
     "socket.io": "^4.5.4"
   }
 }
