--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/MChrisGM/Modular-RC#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "localtunnel": "^2.0.2",
     "onoff": "^6.0.3",
     "raspberrypi-node-camera-web-streamer": "^1.1.2",
     "socket.io": "^4.5.4"
