--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +21,11 @@
     "express": "^4.18.2",
     "localtunnel": "^2.0.2",
     "onoff": "^6.0.3",
+    "pi-blaster.js": "^0.1.3",
+    "pi-servo": "^1.0.2",
+    "pi-servo-blaster.js": "^0.0.3",
+    "pigpio": "^3.3.1",
+    "raspberry-pi-camera-native": "^0.0.0",
     "socket.io": "^4.5.4"
   }
 }
